# Embodied-AI

./: .gitignore  CLAUDE.md  README.md  index.html  pfm_unplug_charger_transformer_fm_autodl_lab_explained.md  pyproject.toml  requirements.txt  requirements_eval.txt  requirements_pfp.txt  results.tsv  setup_pfp_env.sh  todolist.md  vram_probe_result.json
.claude/: CLAUDE.md
archive/code_backups/: train_utils.py.bak
archive/legacy_code/: README.md
archive/notebook_backups/: pfm_unplug_charger_transformer_ckpt_eval_local_lab copy.ipynb  train_fm_4070.ipynb
archive/notes/: baseline-regression-reference.pre_root_layout_rebaseline.json
cli/: _bootstrap.py  eval_all_checkpoints.py  eval_checkpoint.py  record_rollout_videos.py  shared.py  train.py
cloudflare-pages-site/: _headers  _redirects
cloudflare-pages-site/docs/: fixes.md  pdit-vs-mdit.md  research_desk.md  top10-checkpoint-manifest.json
cloudflare-pages-site/homepage/: MAINTENANCE.md  index.html
common/: line_dispatch.py  rlbench_rollout.py  runtime.py  se3.py  task_text.py  visualization.py
config/: loader.py  schema.py
configs/: fm_autodl_lab.json
configs/ablation/: pcd_mdit_100.json  pcd_mdit_100_fair_bs160.json  pcd_mdit_100_fair_bs224_noamp.json  pcd_pdit_anchor_100_fair_bs224_noamp.json  rgb_text_mdit_anchor_100_fair_bs224_noamp.json  rgb_text_pdit_100.json  rgb_text_pdit_100_fair_bs160.json  rgb_text_pdit_100_fair_bs224_noamp.json
configs/data/: unplug_charger_pcd.json
configs/eval/: offline_audit.json
data/: dp_sampler.py  registry.py  replay_buffer.py
docs/: 2026-04-07-autoresearch-pipeline-zh.md  2026-04-07-autoresearch-pipeline.md  2026-04-07-training-model-audit-zh.md  2026-04-07-training-model-audit.md  2026-04-08-fm-recovery-progress-zh.md  2026-04-08-fm-recovery-progress.md  baseline-regression-reference.json  code-structure-zh.md  code-structure.md  fixes.md  research_desk.md  top10-checkpoint-manifest.json
envs/: __init__.py  mdit_5090_eval_requirements.txt  mdit_5090_requirements.txt  rlbench_env.py  setup_mdit_5090_env.sh  setup_mdit_env.sh
homepage/: MAINTENANCE.md  README.md  index.html
lelan/: __init__.py  constants.py
lib/: __init__.py  dataset_pcd.py  diffusion_policy.py  dit_backbone.py  pointnet_tokens.py  rlbench_env.py  train_utils.py
libero/: README.md
mdit/: __init__.py  constants.py
model/: registry.py
notebooks/: mdit_unplug_charger_transformer_autodl_lab.ipynb  pfm_unplug_charger_transformer_ckpt_eval_local_lab.ipynb  pfm_unplug_charger_transformer_fm_autodl_lab.ipynb  pfm_unplug_charger_transformer_strategy_compare_autodl_lab.ipynb
openvla_line/: README.md  pyproject.toml  requirements.txt
openvla_line/configs/: libero_spatial_small.json  libero_spatial_smoke.json
openvla_line/docs/: openvla_structure_zh.md  validation_log.md
openvla_line/notebooks/: openvla_libero_learning_lab.ipynb
openvla_line/openvla_line/: __init__.py  config.py  data.py  model.py  tokenizer.py  trainer.py
openvla_line/scripts/: _bootstrap.py  build_manifest.py  inspect_libero_dataset.py  smoke_train.py  train_openvla.py
pdit/: __init__.py
policy/: __init__.py  base.py  fm_policy.py  registry.py
research/: __init__.py  archive_writer.py  lelan_autoresearch_loop.py  lelan_trial_runner.py  mdit_autoresearch_loop.py  mdit_takeover_controller.py  mdit_trial_runner.py  trial_runner.py
research_archive/: AGENT_WORKFLOW.md  README.md  RULES.md  migration_report.json  task_index.json
scripts/: _bootstrap.py  auto_takeover_pdittoken_obs2_a16.sh  autoresearch_daemon.sh  build_cloudflare_pages_bundle.py  build_homepage_data.py  eval_all_checkpoints.py  eval_checkpoint.py  eval_lelan_all_checkpoints.py  eval_lelan_checkpoint.py  eval_mdit_all_checkpoints.py  eval_mdit_checkpoint.py  eval_pdit_all_checkpoints.py  eval_pdit_checkpoint.py  fix_homepage_ufw.sh  monitor_autoresearch.sh  monitor_pdittoken_100.sh  patch_mdit_latest_from_checkpoint.py  prepare_mdit_resume_run.py  quick_vram_probe.sh  rebuild_homepage.sh  record_lelan_rollout_videos.py  record_mdit_rollout_videos.py  record_pdit_rollout_videos.py  record_rollout_videos.py  retrain_ablation_cross_only_bs128.sh  retrain_ablation_cross_only_bs64.sh  retrain_ablation_fair_bs160.sh  retrain_ablation_strict_fair_bs224.sh  run_autoresearch_trial.py  run_lelan_autoresearch_loop.py  run_lelan_autoresearch_trial.py  run_mdit_audit_queue_supervisor.py  run_mdit_autoresearch_loop.py  run_mdit_autoresearch_trial.py  run_mdit_sequence_supervisor.py  run_mdit_takeover.py  run_mdit_takeover_supervisor.py  run_mdit_train_guard.sh  run_prepared_mdit_resume_guard.sh  run_put_books_on_bookshelf_mdit_mainline_500.sh  (+11 more)
tests/: _bootstrap.py  test_atomic_checkpoint_save.py  test_config_and_registry.py  test_dataset_augmentation.py  test_lelan_autoresearch_loop.py  test_lelan_config_alignment.py  test_lelan_eval_cli.py  test_lelan_model_contracts.py  test_lelan_runtime_and_trial_runner.py  test_mdit_autoresearch_loop.py  test_mdit_cli_smoke.py  test_mdit_config_alignment.py  test_mdit_dataset.py  test_mdit_encoder_contract.py  test_mdit_eval_cli.py  test_mdit_eval_contract.py  test_mdit_policy_contract.py  test_mdit_runtime_and_trial_runner.py  test_mdit_takeover_and_trial_runner.py  test_mdit_train_builders.py  test_model_experiment_knobs.py  test_pdit_eval_cli.py  test_prepare_mdit_resume_run.py  test_trial_runner.py
train/: builders.py  checkpoints.py  eval.py  runner.py
wandb/: latest-run
(+640 files in other folders)
