[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvla_line"
version = "0.1.0"
description = "Standalone OpenVLA-style LIBERO training line."
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "numpy>=1.24",
  "Pillow>=10.0",
  "torch>=2.1",
  "tqdm>=4.66",
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["openvla_line*"]
exclude = ["artifacts*", "docs*", "notebooks*", "scripts*"]

